tests/frontend/fail/emptystorage/varexp.act
contract LValue

constructor
interface constructor()

creates

    uint x := true and x
    
invariants

    x == 0
